// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignActionsBar all changesets not open 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <button
      className="btn btn-secondary mr-1"
      disabled={false}
      id="test-campaign-edit"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-secondary mr-1"
      buttonText="Close"
      disabled={false}
      disabledTooltip="Cannot close while campaign is being created"
      message={
        <p>
          Close campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-danger"
      buttonText="Delete"
      disabled={false}
      disabledTooltip="Cannot delete while campaign is being created"
      message={
        <p>
          Delete campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
  </span>
</div>
`;

exports[`CampaignActionsBar closed 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-danger mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Closed
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-danger"
      buttonText="Delete"
      disabled={false}
      disabledTooltip="Cannot delete while campaign is being created"
      message={
        <p>
          Delete campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
  </span>
</div>
`;

exports[`CampaignActionsBar edit mode 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <button
      className="btn btn-primary mr-1"
      disabled={false}
      form="form1"
      type="submit"
    >
      Save
    </button>
    <button
      className="btn btn-secondary"
      disabled={false}
      form="form1"
      type="reset"
    >
      Cancel
    </button>
  </span>
</div>
`;

exports[`CampaignActionsBar editable 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <button
      className="btn btn-secondary mr-1"
      disabled={false}
      id="test-campaign-edit"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-secondary mr-1"
      buttonText="Close"
      disabled={false}
      disabledTooltip="Cannot close while campaign is being created"
      message={
        <p>
          Close campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-danger"
      buttonText="Delete"
      disabled={false}
      disabledTooltip="Cannot delete while campaign is being created"
      message={
        <p>
          Delete campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
  </span>
</div>
`;

exports[`CampaignActionsBar mode: closing 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <LoadingSpinner
      className="mr-2"
    />
    <button
      className="btn btn-secondary mr-1"
      disabled={true}
      id="test-campaign-edit"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-secondary mr-1"
      buttonText="Close"
      disabled={true}
      disabledTooltip="Cannot close while campaign is being created"
      message={
        <p>
          Close campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-danger"
      buttonText="Delete"
      disabled={true}
      disabledTooltip="Cannot delete while campaign is being created"
      message={
        <p>
          Delete campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
  </span>
</div>
`;

exports[`CampaignActionsBar mode: deleting 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <LoadingSpinner
      className="mr-2"
    />
    <button
      className="btn btn-secondary mr-1"
      disabled={true}
      id="test-campaign-edit"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-secondary mr-1"
      buttonText="Close"
      disabled={true}
      disabledTooltip="Cannot close while campaign is being created"
      message={
        <p>
          Close campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-danger"
      buttonText="Delete"
      disabled={true}
      disabledTooltip="Cannot delete while campaign is being created"
      message={
        <p>
          Delete campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
  </span>
</div>
`;

exports[`CampaignActionsBar mode: saving 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <LoadingSpinner
      className="mr-2"
    />
    <button
      className="btn btn-primary mr-1"
      disabled={true}
      form="form1"
      type="submit"
    >
      Save
    </button>
    <button
      className="btn btn-secondary"
      disabled={true}
      form="form1"
      type="reset"
    >
      Cancel
    </button>
  </span>
</div>
`;

exports[`CampaignActionsBar new with patch set 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline campaign-actions-bar__campaign-icon text-muted mr-2"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      New campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  />
</div>
`;

exports[`CampaignActionsBar new without patch set 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline campaign-actions-bar__campaign-icon text-muted mr-2"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      New campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  />
</div>
`;

exports[`CampaignActionsBar not editable 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  />
</div>
`;

exports[`CampaignActionsBar processing 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <button
      className="btn btn-primary mr-1"
      disabled={false}
      form="form1"
      type="submit"
    >
      Save
    </button>
    <button
      className="btn btn-secondary"
      disabled={false}
      form="form1"
      type="reset"
    >
      Cancel
    </button>
  </span>
</div>
`;

exports[`CampaignActionsBar some changesets still open 1`] = `
<div
  className="d-flex mb-2 position-relative"
>
  <h2
    className="m-0"
  >
    <span
      className="badge badge-success mr-2"
    >
      <Memo(ImageAutoAdjustIcon)
        className="icon-inline campaign-actions-bar__campaign-icon"
      />
       Open
    </span>
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
       
      <span
        className="badge badge-info"
      >
        Beta
      </span>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <button
      className="btn btn-secondary mr-1"
      disabled={false}
      id="test-campaign-edit"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-secondary mr-1"
      buttonText="Close"
      disabled={false}
      disabledTooltip="Cannot close while campaign is being created"
      message={
        <p>
          Close campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
    <CloseDeleteCampaignPrompt
      buttonClassName="btn-danger"
      buttonText="Delete"
      disabled={false}
      disabledTooltip="Cannot delete while campaign is being created"
      message={
        <p>
          Delete campaign 
          <strong>
            Super campaign
          </strong>
          ?
        </p>
      }
      onButtonClick={[Function]}
    />
  </span>
</div>
`;
